subnavigation: fix z-index for menu

--- a/assets/styles/modules/sub-navigation.scss
+++ b/assets/styles/modules/sub-navigation.scss
@@ -11,6 +11,7 @@
     position: absolute;
     top: 100%;
     width: 100%;
+    z-index: 10;
 
     &--open {
       display: flex;
